# cddf

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  drone_audio_detection.py  drone_audio_monitor.py  drone_description.py  drone_rf_detection.py  drone_rtl_power_detection.py  drone_wifi_remote_id.py  emit.ini.example  image_query.py  install_edge_node.sh  mock_sniffle_remote_id.py  pyproject.toml  requirements.txt  rtl_power_visualization.py
.github/workflows/: ci.yml
ansible/: README.md  edge-node-watchtower-playbook.yml  inventory.ini  inventory.ini.example
docs/: architecture.mmd
drone_tools/: amqp.py  detection_emit.py  drone_audio_detection.py  drone_audio_monitor.py  drone_ble_remote_id.py  drone_db.py  drone_description.py  drone_lora.py  drone_rf_detection.py  drone_rtl_power_detection.py  drone_wifi_remote_id.py  image_query.py  lora_to_queue.py  mock_sniffle_remote_id.py  rtl_power_visualization.py
drone_tools/data/: known_drones.json
howto/: .gitkeep  nrf-drone-remote-id-setup.md  sniffle-drone-remote-id-setup.md  sniffle-kismet-integration-setup.md
kismet-queuer/: .gitignore  ISSUES.md  README.md
kismet-queuer/ansible/: README.md  inventory.example  playbook.yml
kismet-queuer/ansible/roles/kismet-queuer/: README.md
kismet-queuer/ansible/roles/kismet-queuer/defaults/: main.yml
kismet-queuer/ansible/roles/kismet-queuer/handlers/: main.yml
kismet-queuer/ansible/roles/kismet-queuer/meta/: main.yml
kismet-queuer/ansible/roles/kismet-queuer/tasks/: main.yml
kismet-queuer/ansible/roles/kismet-queuer/templates/: config.ini.j2  kismet_to_queue.service.j2
kismet-queuer/ansible/vars/: credentials.yml.example
kismet-queuer/config/: config.ini.example
kismet-queuer/scripts/: install_service.sh  uninstall_service.sh
kismet-queuer/src/: kismet_to_queue.py  requirements.txt
kismet-queuer/systemd/: kismet_to_queue.service
kismet-queuer/tests/: test_kismet_to_queue.py
tests/: conftest.py  test_amqp.py  test_detection_emit.py  test_detection_emit_sinks.py  test_detector_emit_wiring.py  test_drone_audio_detection.py  test_drone_audio_monitor.py  test_drone_ble_remote_id.py  test_drone_db.py  test_drone_db_extras.py  test_drone_description.py  test_drone_lora.py  test_drone_lora_link.py  test_drone_rf_detection.py  test_drone_rtl_power_detection.py  test_drone_rtl_power_visualization.py  test_drone_wifi_remote_id.py  test_image_query.py  test_lora_to_queue.py  test_mock_sniffle_remote_id.py
