[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citizen-drone-defense-force"
version = "1.2.0"
description = "Drone audio/RF/Wi-Fi/vision utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "soundfile",
  "sounddevice",
  "matplotlib",
  "scapy>=2.5.0",
  "openai>=1.0.0",
  "bleak>=0.21.0",
  "requests"
]

[project.optional-dependencies]
hackrf = ["hackrf"]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "types-requests", "types-setuptools"]

# Console commands (optional; remove if you don’t want these)
[project.scripts]
drone-image-query = "drone_tools.image_query:main"
drone-describe-image = "drone_tools.drone_description:main"
drone-audio-detect = "drone_tools.drone_audio_detection:main"
drone-audio-monitor = "drone_tools.drone_audio_monitor:main"
drone-rf-detect = "drone_tools.drone_rf_detection:main"
drone-rtl-power-detect = "drone_tools.drone_rtl_power_detection:main"
drone-wifi-remote-id = "drone_tools.drone_wifi_remote_id:main"
drone-rtl-power-visualize = "drone_tools.rtl_power_visualization:main"
drone-mock-sniffle = "drone_tools.mock_sniffle_remote_id:main"
drone-ble-remote-id = "drone_tools.drone_ble_remote_id:main"
drone-db = "drone_tools.drone_db:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drone_tools*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["build", "dist", ".venv", "venv", "kismet-queuer"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
  "E501",  # line too long (handled by formatter)
  "E741",  # ambiguous variable names (lat/lon etc. common here)
  "B008",  # function calls in argument defaults (argparse patterns)
]

[tool.ruff.lint.per-file-ignores]
# scapy.all re-exports are needed so scapy can resolve Dot11/Dot11Beacon layers at runtime.
"drone_tools/drone_wifi_remote_id.py" = ["F401"]
# Tests may import fixtures/helpers without using them directly.
"tests/*" = ["F401", "F841"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = false
exclude = ["build/", "dist/", "kismet-queuer/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# scapy.all uses dynamic layer loading; attribute checks produce false positives.
[[tool.mypy.overrides]]
module = ["drone_tools.drone_wifi_remote_id"]
disable_error_code = ["attr-defined"]

# openai SDK image generation overloads are sensitive to positional/keyword argument style.
[[tool.mypy.overrides]]
module = ["drone_tools.image_query"]
disable_error_code = ["call-overload"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
